--- a/EjemploProyectoExBD/components/campo-texto.html
+++ b/EjemploProyectoExBD/components/campo-texto.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/boton.css">
+    <link rel="stylesheet" href="../css/campo-texto.css">
+
 </head>
 <body>
-    <div class="boton">
-        <span class="icon-"></span>
-        <p>Ingresar</p>
-    </div>
-    
+    <form action="">
+        <div class="campo-texto">
+            <input type="text" name="" id="" required>
+            <label for="">texto</label>
+        </div>
+
+    </form>
 </body>
 </html>
